--- a/Practice/hello.html
+++ b/Practice/hello.html
@@ -2,7 +2,17 @@
 <html>
 <head>
 </head>
+<style type="text/css">
+	#box{
+		background-color:green;
+		width:100px;
+		height:100px;
+	}
+</style>
+<script type="text/javascript">
+	alert(" 깃 허브 블로그 테스트 ");
+</script>
 <body>
-	<p>hello world!</p>
+	<div id="box"></div>
 </body>
 </html>
