--- a/webCode/vuePrac01.html
+++ b/webCode/vuePrac01.html
@@ -1,1 +1,19 @@
 
+<html>
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+<head>
+</head>
+  <script>
+    var app = new Vue({
+      el : '#app',
+      data : {
+        message : '안녕하세요'
+      }
+    })
+  </script>
+<body>
+<div id="app">
+  {{message}}
+</div>
+</body>
+</html>
