--- a/calendar/main2.html
+++ b/calendar/main2.html
@@ -2,13 +2,13 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>연차날!</title>
 </head>
 <style>
  @import url("css/calendar2.css");
 </style>
 <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="preconnect" href="https://fonts.gstatic.com" >
 <link href="https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&family=Noto+Serif+KR&" rel="stylesheet">
 <script src="jquery-3.6.0.min.js"></script>
 <script src="mainCalendar2.js" defer></script>
@@ -28,12 +28,14 @@
 				<li class="year_list"></li>
 				<li class="year_list"></li>
 				<li class="year_list"></li>
+				<li class="year_list"></li>
 			</ul>
 		</div>
 		<span>연차</span>
 		<div id="menubar_restday">
 			<ul class="selectList" id="menubar_restday_list">
 				<li id="restday_select">1일</li>
+				<li class="restday_list">1일</li>
 				<li class="restday_list">2일</li>
 				<li class="restday_list">3일</li>
 				<li class="restday_list">4일</li>
@@ -42,15 +44,12 @@
 	</div>
 	
 	<!-- calendar list area -->
-	<div id="calendar_part">
-		<div class="calendar_date1">
-			<span class="calendar_part_text">4월 3일</span>
+	<div id="calendar_part" class="calendar_current"> <!-- 월별 -->
+		<div class="calendar_date1"><!-- 일별 -->
 		</div>
 		<div class="calendar_date2">
-			<span class="calendar_part_text">일</span>
 		</div>
 		<div class="calendar_content">
-			<span class="calendar_part_text">연차쓰는 날</span>
 		</div>
 	</div>
 </body>
